--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body>
+<body style =" font-family: 'Overlock SC', sans-serif;
+  font-weight: 400;
+  font-style: normal;">
   <div class="container">
     <div class="one">
       <h1 class="one">
