--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <title>Happy Birthday!!! :)</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Overlock+SC&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body style =" font-family: 'Overlock SC', sans-serif;
-  font-weight: 400;
+<body style =" font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
   font-style: normal;">
   <div class="container">
     <div class="one">
